--- a/star-wars-blog/src/styles/Error404.scss
+++ b/star-wars-blog/src/styles/Error404.scss
@@ -1,3 +1,5 @@
+$color_1: midnightblue;
+
 .error-page {
 	background: url(../assets/images/error404.webp) no-repeat center center fixed;
 	position: relative;
@@ -26,9 +28,10 @@
 	}
 	a {
 		font-size: 32px;
-		color: midnightblue;
+		color: $color_1;
 	}
 }
+
 
 
 
