--- a/star-wars-blog/src/styles/Like.scss
+++ b/star-wars-blog/src/styles/Like.scss
@@ -1,3 +1,5 @@
+$color_1: white;
+
 @keyframes extend {
 	0% {
 		width: 40px;
@@ -12,44 +14,52 @@
 		height: 40px;
 	}
 }
-.like-div {
-	width: fit-content;
-	height: fit-content;
+.like-thumb-div {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	position: relative;
-	margin-right: 90px;
+	z-index: 1;
+	width: 50px;
+	height: 50px;
 }
-svg {
-	position: absolute;
-}
-#path1 {
-	fill: white;
-	fill-opacity: 1;
-	stroke: #000000;
+#path5 {
+	fill: #b4b4b4;
+	fill-opacity: 0.59683794;
+	stroke: #b4b4b4;
 	stroke-opacity: 1;
 }
-#path4 {
-	fill-opacity: 1;
-	stroke: #00a100;
-	stroke-width: 0.804057;
-	stroke-opacity: 1;
+#path6 {
+	fill: #b4b4b4;
+	fill-opacity: 0.59607846;
 }
 .like-svg {
+	margin: 0;
 	cursor: pointer;
 	width: 40px;
 	height: 40px;
 	transition-property: animation;
-	&:active {
+	&:active { 
 		animation: extend .1s;
 	}
 }
-
 .like-svg-disabled {
 	width: 40px;
 	height: 40px;
 }
+.like-counter {
+	color: $color_1;
+	cursor: default;
+	height: 10px;
+}
+.like-counter-div {
+	padding-left: 10px;
+	width: 10%;
+	height: fit-content;
+	z-index: 1;
+	display: flex;
+}
+
+
 
 
 /* .like-div {
