--- a/star-wars-blog/src/styles/Account.scss
+++ b/star-wars-blog/src/styles/Account.scss
@@ -1,15 +1,26 @@
+$color_1: white;
+$color_2: black;
+$color_3: #555;
+$font-family_1: Arial, Helvetica, sans-serif;
+$background-color_1: lightblue;
+$background-color_2: lightgray;
+$background-color_3: gainsboro;
+$background-color_4: #FFFFFF;
+$background-color_5: white;
+$background-color_6: transparent;
+
 .account-page {
 	background: url(../assets/images/millenium_condor_chess_room.webp) no-repeat center center fixed;
 	width: 80%;
 	height: fit-content;
-	color: white;
+	color: $color_1;
 	position: relative;
 }
 .account-overlay {
 	position: absolute;
 	width: 100%;
 	height: 100%;
-	background-color: lightblue;
+	background-color: $background-color_1;
 	opacity: 0.6;
 }
 .account-content {
@@ -20,7 +31,7 @@
 	align-items: center;
 }
 .account-title {
-	color: black;
+	color: $color_2;
 	margin-top: 50px;
 	text-transform: lowercase;
 	cursor: default;
@@ -28,7 +39,7 @@
 .account-data {
 	margin-top: 50px;
 	margin-bottom: 50px;
-	color: black;
+	color: $color_2;
 	gap: 40px;
 	width: 50%;
 	height: fit-content;
@@ -38,7 +49,7 @@
 	border-radius: 8px;
 }
 .unvalid-password-text {
-	font-family: Arial, Helvetica, sans-serif;
+	font-family: $font-family_1;
 	font-size: 12px;
 	width: 100%;
 	margin: 0;
@@ -59,7 +70,7 @@
 	overflow: hidden;
 	outline: 5px solid gainsboro;
 	border-radius: 50%;
-	background-color: lightgray;
+	background-color: $background-color_2;
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -79,14 +90,14 @@
 	cursor: default;
 }
 .account-user-value {
-	font-family: Arial, Helvetica, sans-serif;
+	font-family: $font-family_1;
 	font-size: 24px;
 	cursor: default;
 }
 .account-section-separator {
 	height: 2px;
 	width: 80%;
-	background-color: gainsboro;
+	background-color: $background-color_3;
 	margin-top: 60px;
 	margin-bottom: 60px;
 	margin-left: auto;
@@ -115,7 +126,7 @@
 		font-size: 18px;
 		padding-left: 15px;
 		padding-right: 15px;
-		background-color: white;
+		background-color: $background-color_5;
 		&:focus {
 			outline: 1px solid gainsboro;
 		}
@@ -123,25 +134,25 @@
 }
 input {
 	&:-webkit-autofill {
-		background-color: #FFFFFF !important;
-		color: #555 !important;
+		background-color: $background-color_4 !important;
+		color: $color_3 !important;
 		-webkit-box-shadow: 0 0 0 1000px white inset !important;
 		-webkit-text-fill-color: #555555 !important;
 		&:hover {
-			background-color: #FFFFFF !important;
-			color: #555 !important;
+			background-color: $background-color_4 !important;
+			color: $color_3 !important;
 			-webkit-box-shadow: 0 0 0 1000px white inset !important;
 			-webkit-text-fill-color: #555555 !important;
 		}
 		&:active {
-			background-color: #FFFFFF !important;
-			color: #555 !important;
+			background-color: $background-color_4 !important;
+			color: $color_3 !important;
 			-webkit-box-shadow: 0 0 0 1000px white inset !important;
 			-webkit-text-fill-color: #555555 !important;
 		}
 		&:focus {
-			background-color: #FFFFFF !important;
-			color: #555 !important;
+			background-color: $background-color_4 !important;
+			color: $color_3 !important;
 			-webkit-box-shadow: 0 0 0 1000px white inset !important;
 			-webkit-text-fill-color: #555555 !important;
 		}
@@ -157,19 +168,16 @@ input {
 		font-size: 18px;
 		padding-left: 15px;
 		padding-right: 15px;
-		background-color: white;
+		background-color: $background-color_5;
 		&:focus {
 			outline: 1px solid gainsboro;
 		}
 	}
-	& {
-		width: 100%;
-		display: flex;
-		flex-direction: column;
-		gap: 40px;
-		align-items: center;
-	}
-	
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	gap: 40px;
+	align-items: center;
 }
 .account-file-input[type="file"] {
 	position: absolute;
@@ -188,14 +196,14 @@ input {
 	font-size: 18px;
 	padding-left: 15px;
 	padding-right: 15px;
-	background-color: white;
-	font-family: Arial, Helvetica, sans-serif;
+	background-color: $background-color_5;
+	font-family: $font-family_1;
 	&:active {
 		outline: 1px solid gainsboro;
 	}
 }
 .input-valid-img {
-	background-color: transparent;
+	background-color: $background-color_6;
 	width: 25px;
 	height: 25px;
 	margin-left: 20px;
@@ -207,7 +215,7 @@ input {
 	display: flex;
 }
 .account-submit-button {
-	font-family: Arial, Helvetica, sans-serif;
+	font-family: $font-family_1;
 	border: none;
 	outline: none;
 	border-radius: 20px;
@@ -217,7 +225,7 @@ input {
 	font-size: 18px;
 	padding-left: 15px;
 	padding-right: 15px;
-	background-color: white;
+	background-color: $background-color_5;
 	margin-bottom: 30px;
 	cursor: pointer;
 	&:active {
@@ -230,7 +238,7 @@ input {
 	}
 }
 .delete-user {
-	font-family: Arial, Helvetica, sans-serif;
+	font-family: $font-family_1;
 	border: none;
 	outline: none;
 	border-radius: 20px;
@@ -240,7 +248,7 @@ input {
 	font-size: 18px;
 	padding-left: 15px;
 	padding-right: 15px;
-	background-color: white;
+	background-color: $background-color_5;
 	margin-bottom: 30px;
 	cursor: pointer;
 	&:hover {
@@ -261,6 +269,7 @@ input {
 	justify-content: center;
 	align-items: center;
 }
+
 
 
 
