--- a/star-wars-blog/src/styles/Auth.scss
+++ b/star-wars-blog/src/styles/Auth.scss
@@ -1,7 +1,14 @@
+$color_1: white;
+$color_2: grey;
+$font-family_1: Verdana, Geneva, Tahoma, sans-serif;
+$font-family_2: Arial, Helvetica, sans-serif;
+$background-color_1: white;
+$background-color_2: transparent;
+
 .login-page-content {
 	width: 100%;
 	min-height: 100vh;
-	color: white;
+	color: $color_1;
 	background: url('../assets/images/VaderShuttle-Endor.webp') no-repeat center center fixed;
 	display: flex;
 	flex-direction: column;
@@ -21,7 +28,7 @@
 	text-align: center;
 }
 .login-form {
-	font-family: Verdana, Geneva, Tahoma, sans-serif;
+	font-family: $font-family_1;
 	font-weight: bold;
 	display: flex;
 	flex-direction: column;
@@ -87,8 +94,8 @@ label[for="file"] {
 	height: 30px;
 	padding-left: 10px;
 	padding-right: 10px;
-	background-color: white;
-	color: grey;
+	background-color: $background-color_1;
+	color: $color_2;
 	font-size: 15px;
 	border-radius: 10px;
 	text-align: center;
@@ -100,7 +107,7 @@ label[for="file"] {
 	}
 }
 .input-valid-img {
-	background-color: transparent;
+	background-color: $background-color_2;
 	width: 25px;
 	height: 25px;
 	margin-left: 20px;
@@ -114,12 +121,13 @@ label[for="file"] {
 .link-switch {
 	margin-top: 40px;
 	text-decoration: underline;
-	font-family: Arial, Helvetica, sans-serif;
-	color: white;
+	font-family: $font-family_2;
+	color: $color_1;
 	font-weight: bold;
 	cursor: pointer;
-	background-color: transparent;
+	background-color: $background-color_2;
 }
+
 
 
 /* .login-page-content {
