--- a/star-wars-blog/src/styles/Card.scss
+++ b/star-wars-blog/src/styles/Card.scss
@@ -1,3 +1,6 @@
+$color_1: white;
+$background-color_1: black;
+
 @keyframes fadein {
 	from {
 		opacity: 0;
@@ -15,15 +18,37 @@
 	overflow: hidden;
 	border: 2px solid yellow;
 	border-radius: 20px;
-	background-color: black;
+	background-color: $background-color_1;
 	transition-property: all;
 	transition-duration: 1s;
-	&:hover {
+	&:hover { 
 		border: 2px solid white;
 	}
+	.card-home {
+		animation: fadein 1s;
+	}
+	.card-image {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		height: 100%;
+		width: 110%;
+		overflow: hidden;
+		img { 
+			width: 100%;
+			height: auto;
+		}
+	}
 }
-.card-home {
-	animation: fadein 1s;
+.card-name-div {
+	position: absolute;
+	bottom: 0;
+	width: 110%;
+	min-height: 40px;
+	background-color: $background-color_1;
+	display: flex;
+	justify-content: center;
+	align-items: flex-start;
 }
 .card-link {
 	position: relative;
@@ -35,31 +60,9 @@
 	opacity: 0.7;
 	transition-property: all;
 	transition-duration: 1s;
-	&:hover {
+	&:hover { 
 		opacity: 1;
 	}
-}
-.card-image {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	height: 100%;
-	width: 110%;
-	overflow: hidden;
-	img {
-		width: 100%;
-		height: auto;
-	}
-}
-.card-name-div {
-	position: absolute;
-	bottom: 0;
-	width: 110%;
-	min-height: 40px;
-	background-color: black;
-	display: flex;
-	justify-content: center;
-	align-items: flex-start;
 }
 .card-name {
 	text-align: center;
@@ -67,7 +70,7 @@
 	text-transform: lowercase;
 	width: 85%;
 	height: fit-content;
-	color: white;
+	color: $color_1;
 	margin-top: 0;
 	margin-bottom: 5px;
 }
@@ -89,6 +92,7 @@
 		height: fit-content;
 	}
 }
+
 
 
 /*
