--- a/star-wars-blog/src/styles/Code.scss
+++ b/star-wars-blog/src/styles/Code.scss
@@ -1,3 +1,9 @@
+$color_1: white;
+$color_2: black;
+$font-family_1: Arial, Helvetica, sans-serif;
+$background-color_1: black;
+$background-color_2: white;
+
 .collapse-main {
 	width: 50%;
 	height: fit-content;
@@ -14,25 +20,25 @@
 	align-items: center;
 	height: 50px;
 	width: calc(100% - 2px);
-	background-color: black;
+	background-color: $background-color_1;
 	outline: 1px solid white;
 	border-top-left-radius: 10px;
 	border-top-right-radius: 10px;
 }
 .collapse-title {
-	color: white;
+	color: $color_1;
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	height: 100%;
 	width: 100%;
-	font-family: Arial, Helvetica, sans-serif;
+	font-family: $font-family_1;
 	margin-bottom: 0;
 	margin-top: 0;
 	cursor: default;
 }
 .collapse-div-text {
-	background-color: white;
+	background-color: $background-color_2;
 	height: 300px;
 	width: 100%;
 	border-bottom-left-radius: 10px;
@@ -41,7 +47,7 @@
 object {
 	width: 99%;
 	height: 100%;
-	color: black;
+	color: $color_2;
 	text-align: justify;
 }
 
