--- a/star-wars-blog/src/styles/Forum.scss
+++ b/star-wars-blog/src/styles/Forum.scss
@@ -1,8 +1,16 @@
+$color_1: white;
+$color_2: yellow;
+$color_3: black;
+$font-family_1: Arial, Helvetica, sans-serif;
+$font-family_2: 'Starjedi';
+$background-color_1: black;
+$background-color_2: white;
+
 .forum {
 	background: url(../assets/images/forum.webp) no-repeat center center fixed;
 	background-size: cover;
 	position: relative;
-	color: white;
+	color: $color_1;
 	width: calc(80% - 4px);
 	border: 1px solid yellow;
 	min-height: 1300px;
@@ -11,7 +19,7 @@
 	position: absolute;
 	width: 100%;
 	height: 100%;
-	background-color: black;
+	background-color: $background-color_1;
 	opacity: 0.6;
 }
 .forum-content {
@@ -21,7 +29,7 @@
 	align-items: center;
 	width: 100%;
 	text-align: justify;
-	font-family: Arial, Helvetica, sans-serif;
+	font-family: $font-family_1;
 }
 .chart-section {
 	height: fit-content;
@@ -35,7 +43,7 @@
 	cursor: default;
 }
 .forum-title {
-	font-family: 'Starjedi';
+	font-family: $font-family_2;
 	margin-top: 50px;
 	cursor: default;
 }
@@ -48,12 +56,12 @@
 	border: 2px solid yellow;
 	border-radius: 10px;
 	width: 50%;
-	background-color: black;
-	h2 {
+	background-color: $background-color_1;
+	h2 { 
 		width: 100%;
 		text-align: center;
-		color: yellow;
-		font-family: 'Starjedi';
+		color: $color_2;
+		font-family: $font-family_2;
 		padding-bottom: 10px;
 		cursor: default;
 	}
@@ -67,13 +75,14 @@
 	align-items: center;
 	cursor: pointer;
 	transition: all, .4s;
-	&:hover {
+	&:hover { 
 		text-align: center;
-		background-color: white;
-		color: black;
+		background-color: $background-color_2;
+		color: $color_3;
 		font-size: 20px;
 	}
 }
+
 
 
 
