--- a/star-wars-blog/src/styles/PostCard.scss
+++ b/star-wars-blog/src/styles/PostCard.scss
@@ -1,16 +1,20 @@
+$color_1: white;
+$font-family_1: Arial, Helvetica, sans-serif;
+$background-color_1: black;
+
 .post-card-main {
 	position: relative;
 	width: 80%;
 	outline: 2px solid white;
 	border-radius: 10px;
-	font-family: Arial, Helvetica, sans-serif;
+	font-family: $font-family_1;
 	background: url('../assets/images/dashboard.webp') no-repeat center center;
 	background-size: cover;
 	overflow: hidden;
 }
 .post-card-overlay {
 	position: absolute;
-	background-color: black;
+	background-color: $background-color_1;
 	z-index: 0;
 	width: 100%;
 	height: 100%;
@@ -19,7 +23,7 @@
 }
 .post-card-content {
 	width: 100%;
-	color: white;
+	color: $color_1;
 	font-size: 16px;
 }
 .post-card-infos {
@@ -37,7 +41,7 @@
 	margin-left: 15px;
 	display: flex;
 	position: relative;
-	h2 {
+	h2 { 
 		font-size: 16px;
 	}
 }
@@ -46,22 +50,8 @@
 	flex-direction: column;
 	min-width: 100px;
 }
-.post-card-author-div {
-	width: 60px;
-	height: 60px;
-	border-radius: 50%;
-	outline: 1px solid white;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	overflow: hidden;
-	img {
-		height: 100%;
-		width: auto;
-	}
-}
 .post-card-message {
-	p {
+	p { 
 		height: fit-content;
 		width: auto;
 		font-size: 14px;
@@ -77,6 +67,20 @@
 	display: flex;
 	justify-content: flex-end;
 	align-items: center;
+}
+.post-card-author-div {
+	width: 60px;
+	height: 60px;
+	border-radius: 50%;
+	outline: 1px solid white;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	overflow: hidden;
+	img { 
+		height: 100%;
+		width: auto;
+	}
 }
 
 
