--- a/star-wars-blog/src/styles/TestPage.scss
+++ b/star-wars-blog/src/styles/TestPage.scss
@@ -1,3 +1,6 @@
+$font-family_1: Arial, Helvetica, sans-serif;
+$background-color_1: black;
+
 @keyframes extend {
 	0% {
 		width: 40px;
@@ -13,12 +16,12 @@
 	}
 }
 .test-app {
-	font-family: Arial, Helvetica, sans-serif;
+	font-family: $font-family_1;
 	min-height: 100vh;
 	width: 80%;
 	margin-left: auto;
 	margin-right: auto;
-	background-color: black;
+	background-color: $background-color_1;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -40,10 +43,11 @@
 	transition-property: animation;
 	width: 40px;
 	height: 40px;
-	&:active {
+	&:active { 
 		animation: extend .1s;
 	}
 }
+
 
 
 
