--- a/star-wars-blog/src/styles/Topic.scss
+++ b/star-wars-blog/src/styles/Topic.scss
@@ -1,3 +1,8 @@
+$color_1: white;
+$font-family_1: 'Starjedi';
+$background-color_1: transparent;
+$background-color_2: black;
+
 .topic {
 	background: url(../assets/images/star-wars-dialog.webp) no-repeat center center fixed;
 	background-size: cover;
@@ -22,10 +27,10 @@
 	width: 80px;
 	height: 80px;
 	border-radius: 50%;
-	background-color: transparent;
+	background-color: $background-color_1;
 	transition-property: all;
 	transition-duration: .2s;
-	&:hover {
+	&:hover { 
 		background-color: black;
 		filter: invert(1);
 	}
@@ -38,7 +43,7 @@
 	position: absolute;
 	width: 100%;
 	height: 100%;
-	background-color: black;
+	background-color: $background-color_2;
 	opacity: 0.6;
 }
 .topic-content {
@@ -50,9 +55,9 @@
 	align-items: center;
 }
 .topic-title {
-	color: white;
+	color: $color_1;
 	height: fit-content;
-	font-family: 'Starjedi';
+	font-family: $font-family_1;
 	margin-top: 50px;
 	cursor: default;
 	width: 60%;
@@ -69,6 +74,7 @@
 	flex-direction: column;
 	align-items: center;
 }
+
 
 
 
