--- a/star-wars-blog/src/styles/Topics.scss
+++ b/star-wars-blog/src/styles/Topics.scss
@@ -1,6 +1,10 @@
+$color_1: white;
+$background-color_1: transparent;
+$background-color_2: black;
+
 .topics {
 	background: url(../assets/images/star-wars-episode9-team.webp) no-repeat center center fixed;
-	color: white;
+	color: $color_1;
 	position: relative;
 	width: calc(80% - 4px);
 	border: 1px solid yellow;
@@ -18,10 +22,10 @@
 	width: 80px;
 	height: 80px;
 	border-radius: 50%;
-	background-color: transparent;
+	background-color: $background-color_1;
 	transition-property: all;
 	transition-duration: .2s;
-	&:hover {
+	&:hover { 
 		background-color: black;
 		filter: invert(1);
 	}
@@ -41,7 +45,7 @@
 	position: absolute;
 	width: 100%;
 	height: 100%;
-	background-color: black;
+	background-color: $background-color_2;
 	opacity: 0.6;
 }
 .topics-page-title {
@@ -55,6 +59,7 @@
 	align-items: center;
 	gap: 10px;
 }
+
 
 
 
