--- a/star-wars-blog/src/styles/index.scss
+++ b/star-wars-blog/src/styles/index.scss
@@ -1,3 +1,7 @@
+$font-family_1: 'Starjedi';
+$font-family_2: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
+$background-color_1: black;
+
 @font-face {
 	font-family: 'Starjedi';
 	src: local('Starjedi'), url(../assets/fonts/Starjedi.ttf) format('truetype');
@@ -8,7 +12,7 @@
 }
 body {
 	margin: 0;
-	font-family: 'Starjedi';
+	font-family: $font-family_1;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 	background: url(../assets/images/stars.webp) no-repeat center center fixed;
@@ -23,17 +27,18 @@ body {
 	flex-direction: column;
 	justify-content: baseline;
 	align-items: center;
-	background-color: black;
+	background-color: $background-color_1;
 }
 code {
-	font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
+	font-family: $font-family_2;
 }
 /* Ici : media queries pour la seconde partie tablette */
 @media screen and (max-width: 991px) {
 	.app {
-    width: calc(100% - 2px)
-  }
+		width: calc(100% - 2px);
+	}
 }
+
 
 
 /* @font-face {
