--- a/star-wars-blog/src/styles/Account.scss
+++ b/star-wars-blog/src/styles/Account.scss
@@ -15,6 +15,8 @@ $background-color_6: transparent;
 	height: fit-content;
 	color: $color_1;
 	position: relative;
+	width: calc(80% - 4px);
+	border: 1px solid yellow;
 }
 .account-overlay {
 	position: absolute;
