--- a/star-wars-blog/src/styles/Category.scss
+++ b/star-wars-blog/src/styles/Category.scss
@@ -10,7 +10,7 @@ $background-color_1: black;
 	}
 }
 .app-category {
-	width: 80%;
+	width: calc(80% - 4px);
 	min-height: 100vh;
 	margin-left: auto;
 	margin-right: auto;
