--- a/star-wars-blog/src/styles/Error404.scss
+++ b/star-wars-blog/src/styles/Error404.scss
@@ -3,6 +3,8 @@ $color_1: midnightblue;
 .error-page {
 	background: url(../assets/images/error404.webp) no-repeat center center fixed;
 	position: relative;
+	width: calc(80% - 4px);
+	border: 1px solid yellow;
 }
 .error-overlay {
 	position: absolute;
