--- a/star-wars-blog/src/styles/TestPage.scss
+++ b/star-wars-blog/src/styles/TestPage.scss
@@ -18,7 +18,8 @@ $background-color_1: black;
 .test-app {
 	font-family: $font-family_1;
 	min-height: 100vh;
-	width: 80%;
+	width: calc(80% - 4px);
+	border: 1px solid yellow;
 	margin-left: auto;
 	margin-right: auto;
 	background-color: $background-color_1;
