--- a/star-wars-blog/src/styles/Category.scss
+++ b/star-wars-blog/src/styles/Category.scss
@@ -114,6 +114,16 @@ $background-color_1: black;
 		left: 85%;
 	}
 }
+/* Ici : media queries pour la troisième partie tablette */
+@media screen and (max-width: 767px) {
+	.dozen-indicator {
+		font-size: 16px;
+		width: 8%;
+		min-width: 100px;
+		height: 30px;
+		line-height: 27px;
+	}
+}
 
 
 
