Finalisation du design responsive de la page "Category" et de ses composants enfants.

--- a/star-wars-blog/src/styles/Category.scss
+++ b/star-wars-blog/src/styles/Category.scss
@@ -103,6 +103,9 @@ $background-color_1: black;
 	.app-category {
 		width: calc(100% - 4px);
 	}
+	.arrow-section {
+		bottom: 34%;
+	}
 	.prev-arrow-section, .next-arrow-section {
 		width: 60px;
 		height: 60px;
