--- a/star-wars-blog/src/styles/Topics.scss
+++ b/star-wars-blog/src/styles/Topics.scss
@@ -35,7 +35,7 @@ $background-color_2: black;
 	}
 }
 .topics-main {
-	position: absolute;
+	z-index: 1;
 	width: 100%;
 	display: flex;
 	flex-direction: column;
@@ -59,8 +59,10 @@ $background-color_2: black;
 	align-items: center;
 	gap: 10px;
 }
-
-
+.topic-creation-form {
+	margin-top: 50px;
+	margin-bottom: 100px;
+}
 
 
 /* .topics {
