--- a/star-wars-blog/src/styles/TopicForm.css
+++ b/star-wars-blog/src/styles/TopicForm.css
@@ -24,8 +24,11 @@
     margin-left: auto;
     margin-right: auto;
     gap: 15px;
-    background-color: rgba(0, 0, 0, .2);
-    padding: 10px;
+    background-color: rgba(240,255,255,0.2);
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 40px;
+    padding-bottom: 40px;
     border-radius: 10px;
 }
 .creation-topic-input-title {
