--- a/star-wars-blog/src/pages/TestPage/TestPage.scss
+++ b/star-wars-blog/src/pages/TestPage/TestPage.scss
@@ -22,31 +22,12 @@ $background-color_1: black;
 	border: 1px solid yellow;
 	margin-left: auto;
 	margin-right: auto;
-	background-color: $background-color_1;
+	// background-color: $background-color_1;
+	background-color: beige;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
-}
-#path1 {
-	fill: white;
-	fill-opacity: 1;
-	stroke: #000000;
-	stroke-opacity: 1;
-}
-#path4 {
-	fill-opacity: 1;
-	stroke: #00a100;
-	stroke-width: 0.804057;
-	stroke-opacity: 1;
-}
-.like-svg {
-	transition-property: animation;
-	width: 40px;
-	height: 40px;
-	&:active { 
-		animation: extend .1s;
-	}
 }
 
 
