--- a/star-wars-blog/src/sharedStyles/Auth.scss
+++ b/star-wars-blog/src/sharedStyles/Auth.scss
@@ -68,6 +68,7 @@ button {
 		outline: 4px solid yellow;
 		border-radius: 10px;
 	}
+	cursor: pointer;
 	width: 18%;
 	height: 35px;
 	border: none;
@@ -82,34 +83,64 @@ button {
 		outline: 4px solid yellow;
 	}
 }
-input[type="file"] {
-	position: absolute;
-	width: 0;
-	height: 0;
-	padding: 0;
-	opacity: 0;
-}
-label[for="file"] {
+#div-register-input-file {
+	position: relative;
 	outline: 1px solid grey;
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	width: 35%;
-	height: 30px;
-	padding-left: 10px;
-	padding-right: 10px;
+	width: calc(35% + 20px) !important;
+	height: 30px !important;
 	background-color: $background-color_1;
 	color: $color_2;
-	font-size: 15px;
-	border-radius: 10px;
+	font-size: 15px !important;
+	font-weight: bold;
+	font-family: $font-family_2 !important;
+	border-radius: 10px !important;
 	text-align: center;
-	cursor: pointer;
 	&:active {
 		border: none;
 		outline: 4px solid yellow;
 		border-radius: 10px;
 	}
 }
+.div-input-file-content {
+	display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+}
+input[type="file"] {
+	position: relative;
+	z-index: 1;
+	width: 100%;
+	height: 100%;
+	padding: 0;
+	opacity: 0;
+}
+// label[for="file"] {
+// 	outline: 1px solid grey;
+// 	display: flex;
+// 	justify-content: center;
+// 	align-items: center;
+// 	width: 35%;
+// 	height: 30px;
+// 	padding-left: 10px;
+// 	padding-right: 10px;
+// 	background-color: $background-color_1;
+// 	color: $color_2;
+// 	font-size: 15px;
+// 	border-radius: 10px;
+// 	text-align: center;
+// 	cursor: pointer;
+// 	&:active {
+// 		border: none;
+// 		outline: 4px solid yellow;
+// 		border-radius: 10px;
+// 	}
+// }
 .input-valid-img {
 	background-color: $background-color_2;
 	width: 25px;
