Conception du composant UserData avec ses styles. Ce composant sert à lister les utililsateurs inscrits au Forum pour les gérer par la lecture, la modification ou la suppression des données ou des utilisateurs => uniquement disponible pour l'administrateur.

--- a/star-wars-blog/src/components/UserData/UserData.scss
+++ b/star-wars-blog/src/components/UserData/UserData.scss
@@ -1,6 +1,10 @@
 $font-family_1: Arial, Helvetica, sans-serif;
 $background-color_1: lightgray;
 
+.AdminModifyUserForm {
+	margin-top: 30px;
+	margin-bottom: 45px;
+}
 .user-data-table {
 	margin-left: auto;
 	margin-right: auto;
@@ -27,8 +31,12 @@ $background-color_1: lightgray;
 	border: 1px solid gray;
 	border-radius: 10px;
 	overflow: hidden;
+	cursor: pointer;
 	img { 
 		max-height: 40px;
+	}
+	&:hover { 
+		outline: 4px solid red;
 	}
 }
 .user-data-name {
