--- a/star-wars-blog/src/components/Like/Like.scss
+++ b/star-wars-blog/src/components/Like/Like.scss
@@ -22,6 +22,12 @@ $color_1: white;
 	width: 50px;
 	height: 50px;
 }
+#path1 {
+    fill: white;
+    fill-opacity: 1;
+    stroke: #000000;
+    stroke-opacity: 1;
+}
 #path5 {
 	fill: #b4b4b4;
 	fill-opacity: 0.59683794;
