Application du design responsive pour le spinner de la page "Category".

--- a/star-wars-blog/src/pages/Category/Category.scss
+++ b/star-wars-blog/src/pages/Category/Category.scss
@@ -141,6 +141,10 @@ $background-color_1: black;
 		height: 30px;
 		line-height: 27px;
 	}
+	.card-list-spinner {
+		width: 200px;
+		height: 200px;
+	}
 }
 
 
