--- a/star-wars-blog/src/pages/Category/Category.scss
+++ b/star-wars-blog/src/pages/Category/Category.scss
@@ -58,6 +58,7 @@ $background-color_1: black;
 	justify-content: center;
 	align-items: center;
 	background: url(../../assets/images/background03.webp) no-repeat center center fixed;
+	background-size: cover;
 	h1 {
 		margin-top: 50px;
 		color: $color_1;
