--- a/star-wars-blog/src/pages/Category/Category.scss
+++ b/star-wars-blog/src/pages/Category/Category.scss
@@ -136,6 +136,11 @@ $background-color_1: black;
 }
 /* Ici : media queries pour la troisième partie tablette */
 @media screen and (max-width: 767px) {
+	.page-content {
+		h1 {
+			font-size: 22px;
+		}
+	}
 	.dozen-indicator {
 		font-size: 16px;
 		width: 8%;
