--- a/star-wars-blog/src/sharedStyles/Auth.scss
+++ b/star-wars-blog/src/sharedStyles/Auth.scss
@@ -163,6 +163,65 @@ input[type="file"] {
 	cursor: pointer;
 	background-color: $background-color_2;
 }
+/* Ici : media queries pour la première partie tablette */
+@media screen and (max-width: 1023px) {
+    .login-form-input {
+		font-size: 12px;
+		width: 70%;
+		height: 25px;
+		padding-left: 5px;
+		padding-right: 5px;
+		&::placeholder {
+			font-size: 12px;
+		}
+	}
+	button {
+		width: 50% !important;
+		height: 25px !important;
+		padding-left: 5px;
+		padding-right: 5px;
+		font-size: 12px;
+	}
+	#div-register-input-file {
+		width: calc(70% + 10px) !important;
+		height: 25px !important;
+		font-size: 12px !important;
+	}
+	.input-valid-img {
+		width: 10px;
+		height: 10px;
+		margin-left: 0;
+	}
+}
+/* Ici : media queries pour la seconde partie tablette */
+@media screen and (max-width: 991px) {
+	.auth-page {
+		width: calc(100% - 4px);
+	}
+	.login-page-content {
+		h1 {
+			font-size: 22px;
+		}
+	}
+	.link-switch {
+		text-align: center;
+		font-size: 14px;
+		width: 90%;
+	}
+	.forum-div-categories {
+		h2 {
+			font-size: 18px;
+		}
+	}
+	.div-category {
+		width: 100%;
+		height: 57px;
+		font-size: 16px;
+		&:hover {
+			font-size: 18px;
+		}
+	}
+}
 
 
 
