--- a/star-wars-blog/src/components/Card/Card.scss
+++ b/star-wars-blog/src/components/Card/Card.scss
@@ -17,7 +17,7 @@ $background-color_1: black;
 	width: 400px;
 	height: 180px;
 	overflow: hidden;
-	border: 2px solid yellow;
+	border: 2px solid lightcyan;
 	border-radius: 20px;
 	background-color: $background-color_1;
 	transition-property: all;
