--- a/star-wars-blog/src/components/SearchBar/SearchBar.scss
+++ b/star-wars-blog/src/components/SearchBar/SearchBar.scss
@@ -1,6 +1,7 @@
 $color_1: white;
-$color_2: yellow;
+$color_2: rgb(53, 155, 155);
 $color_3: gainsboro;
+$color_4: lightcyan;
 $background-color_1: transparent;
 $background-color_2: black;
 
@@ -35,21 +36,18 @@ $background-color_2: black;
 	padding-left: 10px;
 	border: 1px solid gainsboro;
 	text-align: center;
-	color: $color_1;
+	color: $color_3;
 	font-weight: bold;
 	font-size: 18px;
 	border-radius: 6px;
 	background-color: $background-color_2;
 	&:focus {
-		outline: 4px solid yellow;
+		outline: 4px solid $color_4;
 		border: none;
 		border-radius: 6px;
-		&::placeholder {
-			color: $color_2;
-		}
 	}
 	&::placeholder {
-		color: $color_3;
+		color: $color_2;
 	}
 }
 /* Ici : media queries pour la seconde partie tablette */
