--- a/star-wars-blog/src/components/TopicForm/TopicForm.scss
+++ b/star-wars-blog/src/components/TopicForm/TopicForm.scss
@@ -55,7 +55,7 @@
     font-size: 14px;
 }
 .creation-topic-input-title:focus, .creation-topic-textarea-description:focus, .creation-topic-textarea-question:focus {
-    border: 4px solid yellow;
+    border: 4px solid rgb(53, 155, 155);
     outline: none;
 }
 button {
@@ -65,7 +65,7 @@ button {
 }
 button:hover {
     outline: none;
-    border: 4px solid yellow;
+    border: 4px solid rgb(53, 155, 155);
 }
 button:active {
     border: 4px solid lightskyblue;
