--- a/star-wars-blog/src/pages/Category/Category.scss
+++ b/star-wars-blog/src/pages/Category/Category.scss
@@ -1,4 +1,5 @@
 $color_1: white;
+$color_3: lightcyan;
 $background-color_1: black;
 
 @keyframes fadein {
@@ -19,7 +20,7 @@ $background-color_1: black;
 	justify-content: baseline;
 	align-items: center;
 	position: relative;
-	border: 1px solid yellow;
+	border: 1px solid $color_3;
 }
 .arrow-section {
 	z-index: 1;
