--- a/star-wars-blog/src/sharedStyles/Auth.scss
+++ b/star-wars-blog/src/sharedStyles/Auth.scss
@@ -1,5 +1,6 @@
 $color_1: white;
-$color_2: grey;
+$color_2: rgb(53, 155, 155);
+$color_3: black;
 $font-family_1: Verdana, Geneva, Tahoma, sans-serif;
 $font-family_2: Arial, Helvetica, sans-serif;
 $background-color_1: white;
@@ -7,7 +8,7 @@ $background-color_2: transparent;
 
 .auth-page {
 	width: calc(80% - 4px);
-	border: 1px solid yellow;
+	border: 1px solid $color_1;
 }
 .login-page-content {
 	width: 100%;
@@ -51,10 +52,10 @@ $background-color_2: transparent;
 	padding-left: 10px;
 	padding-right: 10px;
 	border-radius: 10px;
-	outline: 1px solid grey;
+	outline: 1px solid $color_2;
 	&:focus {
 		border: none;
-		outline: 4px solid yellow;
+		outline: 4px solid $color_2;
 		border-radius: 10px;
 	}
 	&::placeholder {
@@ -63,45 +64,45 @@ $background-color_2: transparent;
 	}
 }
 button {
-	&:active {
-		border: none;
-		outline: 4px solid yellow;
-		border-radius: 10px;
-	}
 	cursor: pointer;
 	width: 18%;
 	height: 35px;
 	border: none;
-	outline: 1px solid grey;
+	outline: 1px solid $color_2;
 	padding-left: 10px;
 	padding-right: 10px;
 	border-radius: 10px;
 	margin-top: 50px;
 	font-size: 16px;
 	font-weight: bold;
+	&:active {
+		border: none;
+		outline: 4px solid $color_2;
+		border-radius: 10px;
+	}
 	&:hover {
-		outline: 4px solid yellow;
+		outline: 4px solid $color_2;
 	}
 }
 #div-register-input-file {
 	cursor: pointer;
 	position: relative;
-	outline: 1px solid grey;
+	outline: 1px solid $color_2;
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	width: calc(35% + 20px) !important;
 	height: 30px !important;
 	background-color: $background-color_1;
-	color: $color_2;
+	color: gray;
 	font-size: 15px !important;
-	font-weight: bold;
+	font-weight: bolder;
 	font-family: $font-family_2 !important;
 	border-radius: 10px !important;
 	text-align: center;
 	&:active {
 		border: none;
-		outline: 4px solid yellow;
+		outline: 4px solid $color_2;
 		border-radius: 10px;
 	}
 }
