Correction de la couleur de bordure de la page d'Accueil du site.

--- a/star-wars-blog/src/pages/Home/Home.scss
+++ b/star-wars-blog/src/pages/Home/Home.scss
@@ -1,10 +1,11 @@
 $color_1: rgb(53, 155, 155);
+$color_2: lightcyan;
 $background-color_1: black;
 $font-family_1: Arial, Helvetica, sans-serif;
 
 
 .home-page {
-	border: 1px solid lightcyan;
+	border: 1px solid $color_2;
 	width: auto;
 }
 .div-welcome {
