--- a/star-wars-blog/src/components/Footer/Footer.scss
+++ b/star-wars-blog/src/components/Footer/Footer.scss
@@ -1,6 +1,7 @@
 $color_1: white;
 $color_2: rgb(53, 155, 155);
 $background-color_1: black;
+$font-family_1: Arial, Helvetica, sans-serif;
 
 .footer {
 	width: calc(80% - 2px);
@@ -36,10 +37,10 @@ $background-color_1: black;
 		margin-right: auto;
 		li { 
 			margin-top: 15px;
-			a { 
+			a {
+				font-family: $font-family_1;
 				text-decoration: none;
 				color: $color_2;
-				text-transform: lowercase;
 			}
 		}
 	}
@@ -71,8 +72,9 @@ $background-color_1: black;
 			font-size: 14px;
 		}
 		ul {
-			li { 
-				font-size: 12px;
+			li {
+				font-size: 14px;
+				font-weight: bold;
 			}
 		}
 	}
