Adaptation de la hauteur de texte des liens du Footer pour le responsive design sur mobile.

--- a/star-wars-blog/src/components/Footer/Footer.scss
+++ b/star-wars-blog/src/components/Footer/Footer.scss
@@ -73,6 +73,7 @@ $font-family_1: Arial, Helvetica, sans-serif;
 		}
 		ul {
 			li {
+				line-height: 15px;
 				font-size: 14px;
 				font-weight: bold;
 			}
