--- a/star-wars-blog/src/components/UserData/UserData.scss
+++ b/star-wars-blog/src/components/UserData/UserData.scss
@@ -39,6 +39,14 @@ $background-color_1: lightgray;
 		outline: 4px solid red;
 	}
 }
+.user-data-name-div {
+	padding-left: 10px;
+	width: 100%;
+	height: 100%;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-around;
+}
 .user-data-name {
 	cursor: default;
 	text-transform: lowercase;
@@ -57,6 +65,12 @@ $background-color_1: lightgray;
 	border-radius: 10px;
 	&:hover { 
 		outline: 4px solid red;
+	}
+}
+/* Ici : media queries pour la troisième partie tablette */
+@media screen and (max-width: 767px) {
+	.user-data-name {
+		font-size: 12px;
 	}
 }
 
