--- a/star-wars-blog/src/sharedStyles/Account.scss
+++ b/star-wars-blog/src/sharedStyles/Account.scss
@@ -2,6 +2,8 @@ $color_1: white;
 $color_2: black;
 $color_3: #555;
 $color_4: gainsboro;
+$color_5: rgb(53, 155, 155);
+$color_6: lightcyan;
 $font-family_1: Arial, Helvetica, sans-serif;
 $background-color_1: lightblue;
 $background-color_2: lightgray;
@@ -11,13 +13,12 @@ $background-color_5: white;
 $background-color_6: transparent;
 
 .account-page {
-	background: url(../../assets/images/millenium_condor_chess_room.webp) no-repeat center center fixed;
-	width: 80%;
+	background: url(../assets/images/millenium_condor_chess_room.webp) no-repeat center center fixed;
 	height: fit-content;
 	color: $color_1;
 	position: relative;
 	width: calc(80% - 4px);
-	border: 1px solid yellow;
+	border: 1px solid $color_6 !important;
 }
 .account-overlay {
 	position: absolute;
@@ -36,6 +37,7 @@ $background-color_6: transparent;
 .account-title {
 	color: $color_2;
 	margin-top: 50px;
+	text-align: center;
 	text-transform: lowercase;
 	cursor: default;
 }
@@ -205,16 +207,16 @@ input[type='file'] {
 // 	padding: 0;
 // 	opacity: 0;
 // }
-#div-input-file {
-	position: relative;
-	width: calc(94% + 30px) !important;
-	height: 33px !important;
-	border-radius: 20px !important;
-	font-size: 18px;
-	background-color: $background-color_5;
-	font-family: $font-family_1;
-	outline: none;
-}
+// #div-input-file {
+// 	position: relative;
+// 	width: calc(94% + 30px) !important;
+// 	height: 33px !important;
+// 	border-radius: 20px !important;
+// 	font-size: 18px;
+// 	background-color: $background-color_5;
+// 	font-family: $font-family_1;
+// 	outline: none;
+// }
 .div-input-file-image {
 	display: flex;
     justify-content: center;
@@ -329,6 +331,141 @@ input[type='file'] {
 	cursor: pointer;
 	&:hover {
 		background-color: $color_4;
+	}
+}
+.account-div-return {
+	position: absolute;
+	z-index: 2;
+	display: flex;
+	width: 100%;
+	justify-content: flex-start;
+}
+.admin-arrow-link {
+	position: absolute;
+	margin-left: 15px;
+	margin-top: 20px;
+	width: 80px;
+	height: 80px;
+	border-radius: 50%;
+	background-color: $background-color_6;
+	transition-property: all;
+	transition-duration: .2s;
+	&:hover {
+		filter: invert(1);
+	}
+	img {
+		width: 80px;
+		height: 80px;
+	}
+}
+/* Ici : media queries pour la seconde partie desktop */
+@media screen and (max-width: 1380px) {
+	.account-data {
+		min-width: 390px;
+	}
+}
+/* Ici : media queries pour la seconde partie tablette */
+@media screen and (max-width: 991px) {
+	.account-page {
+		width: calc(100% - 4px) !important;
+	}
+}
+/* Ici : media queries pour la troisième partie tablette */
+@media screen and (max-width: 767px) {
+	.admin-arrow-link {
+		max-width: 60px;
+		max-height: 60px;
+		img {
+			max-width: 60px;
+			max-height: 60px;
+		}
+	}
+	.account-title {
+		font-size: 22px;
+		width: 90%;
+	}
+	.account-profile-title {
+		font-size: 18px !important;
+	}
+	.account-user-picture {
+		width: 70px !important;
+		height: 70px !important;
+	}
+	.account-user-key, .account-user-value {
+		font-size: 16px !important;
+	}
+	.account-form-update-section {
+		h2 {
+			font-size: 18px !important;
+		}
+	}
+	.account-form-update {
+		gap: 25px !important;
+		input {
+			height: 25px !important;
+			font-size: 14px !important;
+		}
+	}
+	.account-label {
+		height: 25px !important;
+		font-size: 14px !important;
+	}
+	.input-valid-img {
+		background-color: transparent;
+		width: 20px !important;
+		height: 20px !important;
+		margin-left: 10px !important;
+	}
+	.account-submit-button {
+		height: 25px !important;
+		font-size: 14px !important;
+	}
+	.account-profile-title {
+		font-size: 18px;
+	}
+	.account-form-delete-section {
+		input {
+			height: 25px !important;
+			font-size: 14px !important;
+		}
+		gap: 25px !important;
+	}
+	.delete-user {
+		width: fit-content !important;
+		height: 25px !important;
+		font-size: 14px !important;
+	}
+	.link-to-admin {
+		font-size: 18px;
+	}
+}
+/* Ici : media queries pour la première partie smartphone */
+@media screen and (max-width: 660px) {
+	.account-content {
+		width: 100% !important;
+	}
+}
+/* Ici : media queries pour la seconde partie smartphone */
+@media screen and (max-width: 420px) {
+	.admin-arrow-link {
+		margin-left: 15px;
+		margin-top: 20px;
+		max-width: 40px;
+		max-height: 40px;
+		img {
+			max-width: 40px;
+			max-height: 40px;
+		}
+	}
+	.account-data {
+		min-width: calc(100% - 40px) !important;
+		margin-top: 50px;
+		margin-bottom: 50px;
+		color: $color_2;
+		gap: 40px;
+		height: fit-content;
+		background: rgba(220, 220, 220, .5);
+		border-radius: 0 !important;
 	}
 }
 
