--- a/star-wars-blog/src/pages/Topic/Topic.scss
+++ b/star-wars-blog/src/pages/Topic/Topic.scss
@@ -1,7 +1,9 @@
 $color_1: white;
+$color_2: rgb(53, 155, 155);
 $font-family_1: 'Starjedi';
 $background-color_1: transparent;
 $background-color_2: black;
+$background-color_3: rgba(255, 255, 255, .8);
 
 .topic {
 	background: url(../../assets/images/star-wars-dialog.webp) no-repeat center center fixed;
@@ -11,7 +13,7 @@ $background-color_2: black;
 	display: flex;
 	flex-direction: column;
 	width: calc(80% - 4px);
-	border: 1px solid yellow;
+	border: 1px solid $color_1;
 }
 .topic-div-return {
 	position: absolute;
@@ -74,7 +76,81 @@ $background-color_2: black;
 	flex-direction: column;
 	align-items: center;
 }
-
+.creation-post-form {
+	display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 80%;
+	max-width: 800px;
+    margin-left: auto;
+    margin-right: auto;
+	margin-top: 30px;
+	margin-bottom: 60px;
+    gap: 15px;
+    background-color: rgba(240,255,255,0.2);
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 40px;
+    padding-bottom: 40px;
+    border-radius: 10px;
+}
+.citation-div {
+	display: flex;
+	flex-direction: column;
+	position: relative;
+	outline: 1px solid $color_1;
+	color: $color_1;
+	width: 90%;
+	height: fit-content;
+    border-radius: 10px;
+    font-size: 16px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+.citation-content {
+	width: 90%;
+	max-width: 620px;
+	margin-left: auto;
+	margin-right: auto;
+}
+.citation-cancel {
+	position: absolute;
+	right: 20px;
+	margin-top: 5px;
+	cursor: pointer;
+}
+.creation-post-textarea-description {
+	width: 90%;
+	height: 150px;
+    border-radius: 10px;
+    background-color: $background-color_3;
+    padding-left: 15px;
+    padding-right: 15px;
+    font-size: 16px;
+    font-family: Arial, Helvetica, sans-serif;
+    box-sizing: border-box;
+}
+.creation-post-textarea-description::placeholder {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 14px;
+}
+.creation-post-textarea-description:focus {
+    border: 4px solid $color_2;
+    outline: none;
+}
+.creation-post-form-submit {
+	background-color: $background-color_3;
+	margin-top: 0;
+	width: 40%;
+}
+.creation-post-form-submit:hover {
+	outline: none;
+	border: 4px solid $color_2;
+}
+.creation-post-form-submit:active {
+	border: 4px solid lightskyblue;
+	outline: none;
+	background-color: lightskyblue;
+}
 
 
 
