Adaptation du code couleur des feuilles de style des pages "Topics" et "Erreur404" pour adéquation avec le style global du projet.

--- a/star-wars-blog/src/pages/Error404/Error404.scss
+++ b/star-wars-blog/src/pages/Error404/Error404.scss
@@ -1,10 +1,11 @@
 $color_1: midnightblue;
+$color_2: white;
 
 .error-page {
 	background: url(../../assets/images/error404.webp) no-repeat center center fixed;
 	position: relative;
 	width: calc(80% - 4px);
-	border: 1px solid yellow;
+	border: 1px solid $color_2;
 }
 .error-overlay {
 	position: absolute;
