--- a/star-wars-blog/src/pages/Topic/Topic.scss
+++ b/star-wars-blog/src/pages/Topic/Topic.scss
@@ -93,6 +93,11 @@ $background-color_3: rgba(255, 255, 255, .8);
     padding-top: 40px;
     padding-bottom: 40px;
     border-radius: 10px;
+	.creation-post-form-title {
+		color: $color_1;
+		margin-top: 0;
+		font-size: 22px;
+	}
 }
 .citation-div {
 	display: flex;
