MIse en place des styles "isActive" des Navlink dans le composant Header.

--- a/star-wars-blog/src/components/Header/Header.scss
+++ b/star-wars-blog/src/components/Header/Header.scss
@@ -76,6 +76,12 @@ $background-color_1: black;
 		align-items: center;
 		gap: 2.2%;
 		font-size: 18px;
+		.navlink-active {
+			color: $color_1;
+		}
+		.navlink-inactive {
+			color: $color_3;
+		}
 	}
 }
 .header-div-connection {
